- Changed copyright statement and a comment
* src/yelp-window.c:
- Changed copyright statement and a comment

* stylesheets/toc2html.xsl:
- Some design prettification

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-01-25  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-window.c:
+	- Changed copyright statement and a comment
+
+	* stylesheets/toc2html.xsl:
+	- Some design prettification
+
 2005-01-21  Shaun McCance  <shaunm@gnome.org>
 
 	* data/ui/yelp.glade:
